--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,29 +15,27 @@
     {% include mathjax.html %}
 </head>
 <body>
-<div class='content'>
-    {% include nav.html %}
-    <div class='front-matter'>
-        <div class='wrap'>
-            <h1>{{ page.title }}</h1>
-            <h4>{{ page.subtitle }}</h4>
-            <div class='bylines'>
-                <div class='byline'>
-                    <h3>Published</h3>
-                    <p>{{ page.date |  date: '%d %B %Y' }}</p>
-                </div>
-            </div>
-            <div class='clear'></div>
+  {% include nav.html %}
+  <div class="wrap content">
+    <div class="front-matter">
+      <h1>{{ page.title }}</h1>
+      <h4>{{ page.subtitle }}</h4>
+      <div class="bylines">
+        <div class="byline">
+          <h3>Published</h3>
+          <p>{{ page.date | date: '%d %B %Y' }}</p>
         </div>
+      </div>
+      <div class="clear"></div>
     </div>
-    <div class='wrap article'>
-        {{ content }}
+
+    <div class="article">
+      {{ content }}
     </div>
-    <div id='bibliography'>
-        <div class='wrap'>
-            {% bibliography --cited %}
-        </div>
+
+    <div id="bibliography">
+      {% bibliography --cited %}
     </div>
-</div>
+  </div>
 </body>
 </html>
