--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
     <meta name='keywords' content='{{ page.keywords }}'>
     <meta name='author' content='Gregory Gundersen'>
 
-    <link href='/css/blog.css' rel='stylesheet'/>
-    <link href='/css/trac.css' rel='stylesheet'/>
-    <link href='/css/markdown.css' rel='stylesheet'/>
+    <link href="{{ '/css/blog.css' | absolute_url }}" rel="stylesheet"/>
+    <link href="{{ '/css/trac.css' | absolute_url }}" rel="stylesheet"/>
+    <link href="{{ '/css/markdown.css' | absolute_url }}" rel="stylesheet"/>
 
     {% include mathjax.html %}
 </head>
