--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,5 +2,6 @@
     <ul class='wrap'>
         <li><a href='/'>Home</a></li>
         <li><a href='/blog'>Blog</a></li>
+        <li><a href='https://github.com/baojian/blog'>Github</a></li>
     </ul>
 </div>
