--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -1,17 +1,29 @@
-<script type='text/x-mathjax-config'>
-MathJax.Hub.Config({
-  jax: ['input/TeX', 'output/HTML-CSS'],
-  tex2jax: {
-    inlineMath: [ ['$', '$'] ],
-    displayMath: [ ['$$', '$$']],
-    processEscapes: true,
-    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code'],
-    extensions: ['color.js']
-  },
-  messageStyle: 'none',
-  'HTML-CSS': { preferredFont: 'TeX', availableFonts: ['STIX','TeX'] }
-});
+<!-- _includes/mathjax.html -->
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']],
+      displayMath: [['$$', '$$'], ['\\[', '\\]']],
+      processEscapes: true,
+      tags: 'ams',               // auto-number AMS equations; use 'all' to number every display math
+      packages: {'[+]': ['ams', 'color', 'noerrors', 'noundefined']},
+      macros: {
+        // add your site-wide macros here, e.g.:
+        // R: "\\mathbb{R}",
+        // E: "\\mathbb{E}",
+      }
+    },
+    options: {
+      skipHtmlTags: ['script','noscript','style','textarea','pre','code'], // don't typeset code blocks
+      renderActions: {
+        addMenu: [] // optional: remove context menu if you want a cleaner UI
+      }
+    },
+    loader: {
+      load: ['[tex]/ams', '[tex]/color', '[tex]/noerrors', '[tex]/noundefined']
+    },
+    svg: { fontCache: 'global' } // fast, consistent SVG output
+  };
 </script>
-
-<script src='//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML' type='text/javascript'></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+<script id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
